media/davewhipp-screen.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* end of reset */



body {
	font: normal normal 400;
	font-size: 100%;
	line-height: 1.5em;
	/*also written as...  font: normal normal 400 100%/1.5em;*/
	font-family: Avenir,Verdana,sans-serif;
	margin-top: 1em;
	margin-left: 1em;
}

p {
	position: relative;
	left: 25%;
	margin-bottom: 0.5em;
	margin-right: 0;
	width: 55%;
}

code {
	font: normal normal;
	font-size: 90%;
	/*line-height: 1em;*/
	font-family: Monaco,Menlo,monospace,sans-serif;
	color: #aaa;
}

p code {
	position: absolute;
	text-align: right;
	right: -20%;
}


ul {
	position: relative;
	left: 25%;
	width: 65%;
	margin-bottom: 0.3em;
	margin-top: -0.5em;
	margin-right: 15%;
}

/*uncomment to get dashes in the list*/
/*li:before {
	content: "-";
	position: relative;
	left: -0.25em;
}*/

li {
	/*second line indent*/
	padding-left: 1.25em;
	text-indent: -1.25em;
	/*color: #777;*/
	word-wrap: break-word;
	overflow-wrap: break-word;
}

li ul {
	position: relative;
	left: 0;
	width: 90%;
	margin-top: 0.25em;
}

li ul li {
	/* Override for nested list items - ensure they don't extend left */
	padding-left: 1.5em;
	text-indent: -1.25em;
}

h1,h2,h3,h4 {
	font-weight: 400;
	font-family: Avenir,Cousine,Verdana,sans-serif;
	width: 80%;
}

h1 {
	text-align: left;
	font-size: 3em;
	line-height: 1em;
	position: relative;
	left: 25%;
}

h1+p {
	/*subtitle*/
	font-style: italic;
	font-size: 110%;
}

h2 {
	font-size: 1.1em;
	color: #bc412b;
	margin-top: 3em;
	position: relative;
	top: 1.4em;
	text-align: right;
	width: 20%;
}

h3 {
	font-size: 1em;
	line-height: 2em;
	position: relative;
	top: 1.7em;
	text-align: right;
	width: 20%;
}

a {
	color: inherit;
	/*text-decoration:none*/
}

a:hover {
	color:#39f
}

#webaddress {
	margin-top: 1em;
	position: relative;
	left: 25%;
	color: #bc412b;
	font-family: Monaco,Menlo,monospace,sans-serif;
	font-size: 100%;
}

#webaddress a {
	text-decoration: none;
}

em {
	/* font-weight: bold; */
	font-style: italic;
}

strong {
	font-weight: bold;
}

#address {
	display: none;
}



/*
@media only screen and (max-width: 480px) {
	make one column somehow...
}*/

